--- a/src/main/resources/templates/datasource.html
+++ b/src/main/resources/templates/datasource.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <div id="rrapp" v-cloak>
+
     <div v-if="showList==1">
         <div class="amg-condition">
             <h3>数据源管理</h3>
@@ -23,6 +24,7 @@
                 <el-input v-model="nameLike" style="width:220px;margin-right:15px;" placeholder="名称" clearable maxlength=30></el-input>
                 <el-button type="danger" icon="el-icon-search" @click="handleCurrentChange(1)">查询</el-button>
                 <el-button type="primary" icon="el-icon-plus" @click="add()">新建数据源</el-button>
+                <!--<el-button type="primary" icon="el-icon-plus" @click="config()">设置通用路径</el-button>-->
             </div>
         </div>
         <div style="margin-top:30px;">
@@ -30,13 +32,14 @@
                 <el-table-column type="index" label="序号" align="center"></el-table-column>
                 <el-table-column prop="name" label="名称" align="center"></el-table-column>
                 <el-table-column prop="type" label="类型" align="center"></el-table-column>
-                <el-table-column prop="url" label="url" align="center"></el-table-column>
+                <el-table-column prop="url" label="url" align="center" :key="Math.random()"></el-table-column>
                 <el-table-column prop="username" label="用户名" align="center"></el-table-column>
                 <el-table-column prop="pwd" label="密码" align="center"></el-table-column>
                 <el-table-column label="操作" align="center">
                     <template scope="scope">
                         <el-button type="text" size="small" @click="editDs(scope.row.id)">编辑</el-button>
                         <el-button type="text" size="small" @click="del(scope.row.id)">删除</el-button>
+                        <el-button type="text" size="small" @click="cfList(scope.row.id)">模块管理</el-button>
                     </template>
                 </el-table-column>
             </el-table>
@@ -52,7 +55,7 @@
         </div>
     </div>
 
-    <div class="edit" v-else style="max-width:1000px">
+    <div v-if="showList==2" class="edit" style="max-width:1000px">
         <h4>编辑数据源</h4>
         <el-form ref="datasource" :model="datasource" :rules="rules" label-position="left"
                  label-width="100px" label-suffix="：" style="margin:50px 0 0 30px;">
@@ -80,8 +83,88 @@
                 </div>
             </el-form-item>
         </el-form>
-
     </div>
+
+    <div v-if="showList==3" class="edit" style="max-width:1000px">
+        <h4>设置路径</h4>
+        <el-form ref="datasource" :model="datasource" :rules="rules" label-position="left"
+                 label-width="100px" label-suffix="：" style="margin:50px 0 0 30px;">
+            <el-form-item label="模块名称" prop="xmlProject">
+                <el-input v-model="config.name" maxlength="100" clearable placeholder="模块名称"></el-input>
+            </el-form-item>
+            <el-form-item label="数据表">
+                <el-select v-model="config.tables" multiple="true" size="medium" filterable placeholder="请选择数据表" style="width: 100%">
+                    <el-option v-for="item in typeSelect" :key="item.value" :label="item.label" :value="item.value"></el-option>
+                </el-select>
+            </el-form-item>
+            <el-form-item label="xml所在项目" prop="xmlProject">
+                <el-input v-model="config.xmlProject" maxlength="100" clearable placeholder="xml所在项目/精确到包路径(不包含包路径)"></el-input>
+            </el-form-item>
+            <el-form-item label="xml包路径" prop="xmlPackage">
+                <el-input v-model="config.xmlPackage" maxlength="100" clearable placeholder="xml包路径"></el-input>
+            </el-form-item>
+            <el-form-item label="entity所在项目" prop="modelProject">
+                <el-input v-model="config.modelProject" maxlength="100" clearable placeholder="entity所在项目/精确到包路径(不包含包路径)"></el-input>
+            </el-form-item>
+            <el-form-item label="entity包路径" prop="modelPackage">
+                <el-input v-model="config.modelPackage" maxlength="100" clearable placeholder="entity包路径"></el-input>
+            </el-form-item>
+            <el-form-item label="dao所在项目" prop="clientProject">
+                <el-input v-model="config.clientProject" maxlength="100" clearable placeholder="dao所在项目/精确到包路径(不包含包路径)"></el-input>
+            </el-form-item>
+            <el-form-item label="dao包路径" prop="clientPackage">
+                <el-input v-model="config.clientPackage" maxlength="100" clearable placeholder="dao包路径"></el-input>
+            </el-form-item>
+            <el-form-item label="service所在项目" prop="serviceProject">
+                <el-input v-model="config.serviceProject" maxlength="100" clearable placeholder="service所在项目/精确到包路径(不包含包路径)"></el-input>
+            </el-form-item>
+            <el-form-item label="service包路径" prop="servicePackage">
+                <el-input v-model="config.servicePackage" maxlength="100" clearable placeholder="service包路径"></el-input>
+            </el-form-item>
+            <el-form-item>
+                <div style="text-align:right;">
+                    <el-button type="primary" plain @click="editCfInfo()">保 存</el-button>
+                    <el-button type="info" plain @click="goBack2()">返 回</el-button>
+                </div>
+            </el-form-item>
+        </el-form>
+    </div>
+
+    <div v-if="showList==4">
+        <div class="amg-condition">
+            <h3>模块管理</h3>
+            <div style="display:flex;">
+                <!--<el-input v-model="nameLike2" style="width:220px;margin-right:15px;" placeholder="名称" clearable maxlength=30></el-input>
+                <el-button type="danger" icon="el-icon-search" @click="handleCurrentChange(1)">查询</el-button>-->
+                <el-button type="primary" icon="el-icon-plus" @click="editCf()">新建模块</el-button>
+                <!--<el-button type="primary" icon="el-icon-plus" @click="config()">设置通用路径</el-button>-->
+                <el-button type="primary" icon="el-icon-back" @click="goBack()">返回</el-button>
+            </div>
+        </div>
+        <div style="margin-top:30px;">
+            <el-table :data="configData" border v-loading="loading">
+                <el-table-column type="index" label="序号" align="center"></el-table-column>
+                <el-table-column prop="name" label="名称" align="center"></el-table-column>
+                <el-table-column prop="tables" label="数据表" align="center"></el-table-column>
+                <el-table-column label="操作" align="center">
+                    <template scope="scope">
+                        <el-button type="text" size="small" @click="editCf(scope.row.id)">编辑</el-button>
+                        <el-button type="text" size="small" @click="delCf(scope.row.id)">删除</el-button>
+                    </template>
+                </el-table-column>
+            </el-table>
+            <!--<div style="text-align: center">
+                <el-pagination
+                        @current-change="handleCurrentChange"
+                        :current-page.sync="pageNum"
+                        :page-size="pageSize"
+                        layout="total, prev, pager, next, jumper"
+                        :total="total">
+                </el-pagination>
+            </div>-->
+        </div>
+    </div>
+
 </div>
 </body>
 <script src="js/modules/datasource.js"></script>
